@startuml

class MainActivity
class RegisterUser
class LoginActivity
class Transaction
class User
class FileSelectorFragment
class FileUtils
class HSBCRegex
interface PDFProcessor
class HSBCPDFProcessor
class AnalyticsFragment
'class MainActivity
class RecyclerViewAdapter
class TransactionFragment
class ViewTransaction
class MyXAxisValueFormatter

class DashboardFragment
class AddToCategoryFragment
class MostRecentRVAdapter
class MoneyValueFormatter
class ValueFormatter
class PercentageValueFormatter
class ViewTransaction
class SummaryXFormatter
class Category

LoginActivity ..> MainActivity : <<instantiate>>

RegisterUser ..> MainActivity : <<instantiate>>
RegisterUser *-- User

MainActivity ..> TransactionFragment : <<instantiate>>
MainActivity ..> AnalyticsFragment : <<instantiate>>
MainActivity ..> FileSelectorFragment : <<instantiate>>
MainActivity ..> DashboardFragment : <<instantiate>>

PDFProcessor o-- Transaction
PDFProcessor *-- HSBCPDFProcessor

FileSelectorFragment *-- PDFProcessor
FileSelectorFragment *-- FileUtils

HSBCPDFProcessor *-- HSBCRegex

TransactionFragment *-- RecyclerViewAdapter
TransactionFragment *-- ViewTransaction


ViewTransaction *-- AddToCategoryFragment

DashboardFragment *-- SummaryXFormatter
DashboardFragment *-- MostRecentRVAdapter

Transaction *-- Category

AnalyticsFragment *-- MoneyValueFormatter
AnalyticsFragment *-- PercentageValueFormatter
AnalyticsFragment *-- MyXAxisValueFormatter

ValueFormatter <|-- MoneyValueFormatter
ValueFormatter <|-- PercentageValueFormatter
ValueFormatter <|-- MyXAxisValueFormatter





@enduml